2013-02-08  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.h (value:,value:value:,value:value:value:,valueWithArguments:):
    * STBlock.m (value:,value:value:,value:value:value:,valueWithArguments:):
    Define standard Smalltalk methods for invoking blocks with arguments.

    * STBlock.m	(valueWith:,valueWith:with:,valueWith:with:with:,
    valueWith:with:with:with:,valueWithArgs:,handler:):
    * NSArray+additions.m (do:,select:,reject:,collect:,detect:):
    * NSNumber+additions.m (to:do:,to:step:do:):
    Use the new standard methods instead of the old non-standard ones.

2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiler.m (compileString:): Fix syntax error reporting to
    properly show the error context.

    * STCompiler.m (compileMethodFromSource:forReceiver:): Fix space leak
    when an exception other than a syntax error is raised.

    * STCompiler.m (compileStatements:): Autorelease compiled code here ...
    * STCompiler.m (compileMethod:): ... instead of here.

2012-10-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompilerUtils.m (STCPrimaryExpression): Remove repeated
    attribute declaration from the implementation.

2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSourceReader.m (-lineNumberForIndex:): Fix unintended fall through
    in a switch statement detected by clang.

2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiledScript.m (-executedInEnvironment:):
    * STSmalltalkScriptObject.m (-forwardInvocation:):
    Fix potential space leak detected by clang.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiledScript.m (+initialize, -executeInEnvironment:): Rename
    finalize selector to shutDown to avoid conflict with the NSObject
    -finalize method.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiler.m (-indexOfTemporaryVariable, -indexOfNamedReference,
    -compilePrimary:, -compileExpression:): Minimal set of changes to